--- a/style_uzatu.css
+++ b/style_uzatu.css
@@ -20,7 +20,7 @@ body {
     min-height: 100vh;
     background-color: var(--bg-color);
     background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.25)), 
-                      url('/static/41.png'); 
+                      url('41.png'); 
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
@@ -293,4 +293,5 @@ body {
     justify-content: center;
     z-index: 1000;
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+
 }
